// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkOrderInfo component when the work order is higher priority includes an highlight for that priority 1`] = `
<DocumentFragment>
  <div
    class="work-order-info"
  >
    <div
      class="lbh-body-s govuk-!-margin-bottom-2"
    >
      <span
        class="circle-tag circle-tag--status-in-progress"
      />
      <span
        class="lbh-!-font-weight-bold"
      >
        Status: In Progress
      </span>
      <br />
      <span
        class="text-dark-red govuk-!-font-size-14"
      >
        <strong>
          Priority: some priority text
        </strong>
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span>
        Raised by Dummy Agent
      </span>
      <br />
      <span>
        18 Jan 2021, 15:28
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span
        class="lbh-!-font-weight-bold"
      >
        Target: 23 Jan 2021, 18:30
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span>
        Caller: Jill Smith
      </span>
      <br />
      <span>
        07700 900999
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderInfo component when the work order is lower priority should render properly 1`] = `
<DocumentFragment>
  <div
    class="work-order-info"
  >
    <div
      class="lbh-body-s govuk-!-margin-bottom-2"
    >
      <span
        class="circle-tag circle-tag--status-in-progress"
      />
      <span
        class="lbh-!-font-weight-bold"
      >
        Status: In Progress
      </span>
      <br />
      <span
        class="govuk-!-font-size-14"
      >
        Priority: some priority text
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span>
        Raised by Dummy Agent
      </span>
      <br />
      <span>
        18 Jan 2021, 15:28
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span
        class="lbh-!-font-weight-bold"
      >
        Target: 23 Jan 2021, 18:30
      </span>
    </div>
    <div
      class="lbh-body-xs govuk-!-margin-bottom-2"
    >
      <span>
        Caller: Jill Smith
      </span>
      <br />
      <span>
        07700 900999
      </span>
    </div>
  </div>
</DocumentFragment>
`;
